Fixed "Update" button being covered by Safari address bar. * Fixed button spacing on delete deposit dialogue.

--- a/client/src/app/components/dashboard/dashboard.component.scss
+++ b/client/src/app/components/dashboard/dashboard.component.scss
@@ -94,8 +94,8 @@ main {
 	z-index: 1;
 
 	--shadow-color: 220 3% 15%;
-	--computed-shadow-color: hsl(var(--shadow-color) / calc(var(--shadow-strength) + 2%));
 	--shadow-strength: 51%;
+	--computed-shadow-color: hsl(var(--shadow-color) / calc(var(--shadow-strength) + 2%));
 	--shadow-4: -5px 0px 15px 0px var(--computed-shadow-color);
 
 	box-shadow: var(--shadow-4);
@@ -105,7 +105,7 @@ main {
 
 button.fab {
 	--shadow-color: 220 3% 15%;
-	--shadow-strength: 1%;
+	--shadow-strength: 21%;
 	--shadow-2: 0 3px 5px -2px hsl(var(--shadow-color) / calc(var(--shadow-strength) + 3%)),
 		0 7px 14px -5px hsl(var(--shadow-color) / calc(var(--shadow-strength) + 5%));
 	--shadow-4: 0 -2px 5px 0 hsl(var(--shadow-color) / calc(var(--shadow-strength) + 2%)),
